<resources>
    <string name="app_name">NotifHub</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="home">Acceuil</string>
    <string name="compte">Mon Compte</string>
    <string name="annonce">Deposer une annonce</string>
    <string name="all_annonce">Toutes les annonces</string>
    <string name="my_annonces">Mes annonces</string>
    <string name="search">Recherche</string>
    <string name="about">A Propos de...</string>
    <string name="settings">Parametres</string>
    <string name="exit">Deconnection</string>

    <string name="edit_title_annonce">titre de l\'annonce</string>
    <string name="edit_phone_annonce">Numero de telephone</string>
    <string name="edit_desc_annonce">description de l\'annonce</string>
    <string name="edit_latitude_annonce">Latitude</string>
    <string name="edit_longitude_annonce">Longitude</string>
    <string name="edit_price_annonce">prix de l\'annonce</string>
    <string name="btn_save_annonce">Enregistrer l\'annonce</string>

    <string name="username">Nom d\'utilisateur</string>
    <string name="password">Mot de passe</string>
    <string name="retape_pwd">Reecrire le mot de passe</string>

</resources>
