<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:layout_marginRight="15dp"
        android:paddingTop="50dp"
        android:layout_height="match_parent">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/titleLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/titleEditText"
                android:maxLines="1"
                android:hint="@string/edit_title_annonce"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/phoneLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/phoneEditText"
                android:maxLines="1"
                android:hint="@string/edit_phone_annonce"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/descLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/descEditText"
                android:maxLines="6"
                android:hint="@string/edit_desc_annonce"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/priceLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/priceEditText"
                android:maxLines="1"
                android:hint="@string/edit_price_annonce"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/latLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/latEditText"
                android:maxLines="1"
                android:hint="@string/edit_latitude_annonce"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/longLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/longEditText"
                android:maxLines="1"
                android:hint="@string/edit_longitude_annonce"
                />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_save_annonce"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/btn_style"
            android:text="@string/btn_save_annonce"/>

    </LinearLayout>



</LinearLayout>
