<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/myPrimaryDarkColor"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imglogo"
        android:layout_width="140dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_logo"/>

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/llBannerBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:paddingTop="30dp"
        android:background="@drawable/layout_border"
        android:weightSum="1">
        <TextView
            android:gravity="center_horizontal"
            android:textSize="25sp"
            android:textStyle="italic"
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10.0dip"
            android:layout_marginTop="10.0dip"
            android:layout_marginBottom="30dp"
            android:text="S'enregistrer sur NotifHub" />


        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/username2"
                android:layout_width="match_parent"
                android:hint="@string/username"
                android:layout_weight="0.95"
                android:layout_margin="5dp"
                android:inputType="textEmailAddress"
                style="@style/EditMonText"/>

            <EditText
                android:id="@+id/password2"
                android:layout_width="match_parent"
                android:hint="@string/password"
                android:layout_weight="0.95"
                android:layout_margin="5dp"
                android:inputType="textPassword"
                style="@style/EditMonText"/>

            <EditText
                android:id="@+id/repassword"
                android:layout_width="match_parent"
                android:hint="@string/retape_pwd"
                android:layout_weight="0.95"
                android:layout_margin="5dp"
                android:inputType="textPassword"
                style="@style/EditMonText"/>

        </LinearLayout>


        <Button
            android:id="@+id/btn_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/btn_style"
            android:text="S'enregistrer"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="30.0dip"
            android:layout_marginBottom="20dp">
            <TextView
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10.0dip"
                android:text="" />


        </LinearLayout>



    </LinearLayout>


</RelativeLayout>